--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -71,7 +71,7 @@
   <h2>9. İletişim</h2>
   <p>Herhangi bir sorunuz, görüşünüz veya gizlilik ile ilgili endişeniz varsa bizimle iletişime geçebilirsiniz:</p>
   <ul>
-    <li>E-posta: <a href="mailto:alperduman@gmail.com">alperduman@gmail.com</a></li>
+    <li>E-posta: <a href="mailto:businessalperr@gmail.com">E-Posta Gönder</a></li>
   </ul>
 
 </body>
